@@ -2,6 +2,8 @@
     * Clicking in the map with max zoom will select an entire region
     * Chunk coordinates for the currently hovered chunk is displayed
       in the bottom right corner of the map view
+    * Saving current frame actually saves the current frame now, not
+      the last displayed frame!
 
 1.1.2 - 2013-01-05
 
